@@ -1,6 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001002
+ [Added / configure requires]
+ - perl 5.008
+
+ [Added / test requires]
+ - perl 5.008
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.001001 2014-08-16T17:59:02Z
  [Added / test requires]
@@ -13,4 +21,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  - File::Spec::Functions
  - List::Util
  - version
-
