@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001002
+ [Added / test recommends]
+ - Moo 1.000008
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001003 → 0.99
 
 0.001001 2014-08-16T17:59:02Z
  [Changed / test recommends]
@@ -8,4 +17,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 
  [Removed / test recommends]
  - CPAN::Meta::Requirements 2.120900
-
